# HinaFlow

./: .gitignore  CMakeLists.txt  FindHoudini.cmake  README.md  common.h
examples/: DiffPDE.hipnc  Diffusion.hipnc  FLIP.hipnc  FastPoisson.hipnc  Image.hipnc  KernelViewer.hipnc  PBF.hipnc  PhiFlow_VisualizeFields.hipnc  PhiFlow_VisulizeFields.hipnc  PhifFlow_ImageReconstruction.hipnc  PhifFlow_Smoke_2D.hipnc  PhifFlow_Smoke_3D.hipnc  Poisson.hipnc  Python.hipnc  Python2.hipnc  ScalarFlow.hipnc  Wave.hipnc  debug_phiflow.py
examples/script/: init.py  step.py
examples/script/DiffPDE/: ns_init.py  ns_init2d.py  ns_init3d.py  ns_step2d.py
hdk/: Entrance.cpp  GAS_AdaptiveDomain.cpp  GAS_AdaptiveDomain.h  GAS_DebugSPHKernel.cpp  GAS_DebugSPHKernel.h  GAS_PhiFlowFetchField.cpp  GAS_PhiFlowFetchField.h  GAS_PhiFlowFreeSolve.cpp  GAS_PhiFlowFreeSolve.h  GAS_PhiFlowSmoke2D.cpp  GAS_PhiFlowSmoke2D.h  GAS_PhiFlowSmoke3D.cpp  GAS_PhiFlowSmoke3D.h  GAS_PhiFlowVisualizeField.cpp  GAS_PhiFlowVisualizeField.h  GAS_PhiFlowVisulizeField.cpp  GAS_PhiFlowVisulizeField.h  GAS_RayIntersectVisualizer.cpp  GAS_RayIntersectVisualizer.h  GAS_ReadNPZFiles.cpp  GAS_ReadNPZFiles.h  GAS_ReconstructDensity.cpp  GAS_ReconstructDensity.h  GAS_SolveDiffusion.cpp  GAS_SolveDiffusion.h  GAS_SolvePoisson.cpp  GAS_SolvePoisson.h  GAS_SolveWave.cpp  GAS_SolveWave.h  GAS_SolverFLIP.cpp  GAS_SolverFLIP.h  GAS_SolverPBF.cpp  GAS_SolverPBF.h  GAS_SolverPhiFlow.cpp  GAS_SolverPhiFlow.h  GAS_VolumeRender.cpp  GAS_VolumeRender.h  SOP_Image2Volume.cpp  SOP_Image2Volume.h
python/: CMakeLists.txt  main.cpp  phiflow_smoke.cpp  phiflow_smoke.h  pyproject.toml  setup.py  test.py
src/: diffusion.cpp  diffusion.h  flip.cpp  flip.h  image.cpp  image.h  pbf.cpp  pbf.h  phiflow_smoke.cpp  poisson.cpp  poisson.h  tomography.cpp  tomography.h  wave.cpp  wave.h
